tests/examples/good/garbage_collector/good311.lat
int main() {
    int a;
    a++;
    printInt(a);
    return 0;
}