tests/examples/bad/var_redeclaration2.lat
int main() {
    int a;
    bool a;
    return 1;
}
